--- a/config.json
+++ b/config.json
@@ -1,12 +1,12 @@
 {
-  "version": 1.0
+  "version": 1.0,
   "config": {
-		"main": {
-      "setting1": "something",
-			"setting2": "something else",
+	"main": {
+	"setting1": "something",
+	"setting2": "something else"
     },
     "other": {
       "firstLaunch": true,
-      "numLaunches": 0,
+      "numLaunches": 0
     }
 }
